// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AvatarWithFallback - Snapshots > matches snapshot when avatarUrl is not provided 1`] = `
<div
  class="size-16"
  data-testid="avatar"
>
  <div
    class="overflow-hidden border-none text-2xl"
    data-testid="avatar-fallback"
  >
    <div
      class="h-full w-full rounded-full text-background"
      data-name="Jane Smith"
      data-testid="facehash"
    >
      <span
        data-testid="avatar-fallback-initial"
      >
        J
      </span>
    </div>
  </div>
</div>
`;

exports[`AvatarWithFallback - Snapshots > matches snapshot when avatarUrl is provided 1`] = `
<div
  class="size-16"
  data-testid="avatar"
>
  <img
    alt="John Doe"
    class=""
    data-testid="avatar-image"
    src="https://cdn.example.com/avatar/6mfxozzqmb36rc9rgy3rykoyfghfao74n8igt5tf1boehproahoy"
  />
  <div
    class="overflow-hidden border-none"
    data-testid="avatar-fallback"
  >
    <div
      class="h-full w-full rounded-full text-background"
      data-name="6mfxozzqmb36rc9rgy3rykoyfghfao74n8igt5tf1boehproahoy"
      data-testid="facehash"
    >
      <span
        data-testid="avatar-fallback-initial"
      >
        J
      </span>
    </div>
  </div>
</div>
`;

exports[`AvatarWithFallback - Snapshots > matches snapshot when image is blurred 1`] = `
<div
  class="size-16"
  data-testid="avatar"
>
  <img
    alt="John Doe"
    class="blur-xs"
    data-testid="avatar-image"
    src="https://cdn.example.com/avatar/6mfxozzqmb36rc9rgy3rykoyfghfao74n8igt5tf1boehproahoy"
  />
  <div
    aria-label="Show blurred content"
    class="absolute inset-0 flex cursor-pointer items-center justify-center"
    data-testid="unblur-button"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-eye-off size-1/2 max-h-10 max-w-10"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
      />
      <path
        d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
      />
      <path
        d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
      />
      <path
        d="m2 2 20 20"
      />
    </svg>
  </div>
  <div
    class="overflow-hidden border-none"
    data-testid="avatar-fallback"
  >
    <div
      class="h-full w-full rounded-full text-background"
      data-name="6mfxozzqmb36rc9rgy3rykoyfghfao74n8igt5tf1boehproahoy"
      data-testid="facehash"
    >
      <span
        data-testid="avatar-fallback-initial"
      >
        J
      </span>
    </div>
  </div>
</div>
`;

exports[`AvatarWithFallback - Snapshots > matches snapshot with custom alt text 1`] = `
<div
  class="size-16"
  data-testid="avatar"
>
  <img
    alt="Custom alt"
    class=""
    data-testid="avatar-image"
    src="https://cdn.example.com/avatar/6mfxozzqmb36rc9rgy3rykoyfghfao74n8igt5tf1boehproahoy"
  />
  <div
    class="overflow-hidden border-none"
    data-testid="avatar-fallback"
  >
    <div
      class="h-full w-full rounded-full text-background"
      data-name="6mfxozzqmb36rc9rgy3rykoyfghfao74n8igt5tf1boehproahoy"
      data-testid="facehash"
    >
      <span
        data-testid="avatar-fallback-initial"
      >
        J
      </span>
    </div>
  </div>
</div>
`;

exports[`AvatarWithFallback - Snapshots > matches snapshot with custom data-testid 1`] = `
<div
  class="size-16"
  data-testid="custom-avatar"
>
  <img
    alt="John Doe"
    class=""
    data-testid="avatar-image"
    src="https://cdn.example.com/avatar/6mfxozzqmb36rc9rgy3rykoyfghfao74n8igt5tf1boehproahoy"
  />
  <div
    class="overflow-hidden border-none"
    data-testid="avatar-fallback"
  >
    <div
      class="h-full w-full rounded-full text-background"
      data-name="6mfxozzqmb36rc9rgy3rykoyfghfao74n8igt5tf1boehproahoy"
      data-testid="facehash"
    >
      <span
        data-testid="avatar-fallback-initial"
      >
        J
      </span>
    </div>
  </div>
</div>
`;
